--- a/Presentation.adoc
+++ b/Presentation.adoc
@@ -16,6 +16,8 @@ include::6_Nullsafe.adoc[]
 
 include::Exercise1.adoc[]
 
+include::Exercise2.adoc[]
+
 include::7_ClassesAndObjects.adoc[]
 
 include::8_Methods.adoc[]
