--- a/3_Goals.adoc
+++ b/3_Goals.adoc
@@ -2,12 +2,12 @@
 [%step]
 * Etwas gelernt
 * In der Lage Kotlin-code zu schreiben und auszuführen
-* Fallstricke wenn man aus Java kommt
+* Fallstricke umschiffen, wenn man aus Java kommt
 
 == No Goals
 [%step]
 * DER 1A Kotlin-Programmierer werden
-* Keine Bytecodeanalyse
+* Bytecodeanalyse
 * Java Crashkurs
-* Kein Java-bashing
+* Java-bashing
 * Trotzdem gerne bei Verständnisproblemen oder Fragen zu Java/OOP etc melden
